@@ -461,6 +461,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #13847: time.localtime() and time.gmtime() now raise an OSError instead
+  of ValueError on failure. time.ctime() and time.asctime() now raises an
+  OSError if localtime() failed.
+
 - Issue #13862: Fix spurious failure in test_zlib due to runtime/compile time
   minor versions not matching.
 
